# mitweet-ideology-detection

./: .gitignore  README.md  pyproject.toml
src/training/: config.py  model.py  paper_comparison.py  train.py
src/training/data/: dataset_info.py  preprocess.py
src/utils/: types.py
