[tool.poetry]
name = "ideology"
version = "0.1.0"
description = ""
authors = ["Ivan Lytvynenko <lytvynenko.i.d@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.8"
spacy-transformers = "^1.3"
torch = "^2.6.0"
lightning = "^2.5.0.post0"
mlflow = "^2.20.2"
hydra-core = "^1.3.2"
imbalanced-learn = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.2.3.241126"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.basedpyright]
stubPath = "./stubs"
reportMissingTypeStubs = "information"
reportUnknownVariableType = "hint"
reportUnknownArgumentType = "hint"
reportUnknownMemberType = "none"
reportImplicitOverride = "none"
reportAny = "hint"
